tests/snapshots/examples_fixtures/async__25_multiworker_parallel.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/25_multiworker_parallel.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
