tests/snapshots/examples_fixtures/async__26_stress_fanout.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/26_stress_fanout.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
