tests/snapshots/examples_fixtures/async__27_stress_racing_cancel.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/27_stress_racing_cancel.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
