tests/snapshots/examples_fixtures/async__28_stress_timeout_churn.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/28_stress_timeout_churn.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
