tests/snapshots/examples_fixtures/async__29_deep_io_in_both.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/29_deep_io_in_both.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
