tests/snapshots/examples_fixtures/async__cancellation_propagation.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/cancellation_propagation.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
