tests/snapshots/examples_fixtures/async__parallel_both.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/parallel_both.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
