tests/snapshots/examples_fixtures/async__repro_native_seq.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/repro_native_seq.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
