tests/snapshots/examples_fixtures/async__tcp_echo_server.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/tcp_echo_server.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
