tests/snapshots/examples_fixtures/async__timeout_connect.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/timeout_connect.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
